--- a/.env
+++ b/.env
@@ -1,4 +1,18 @@
-PORT=5000
-SESSION_SECRET=your-secret-key-change-this
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=$2a$10$vI8aWBnW3fID.ZQ4/zo1G.q1lRps.9cGLcZEiGDMVr5yUP1KUOYTa 
+NODE_ENV="development"
+PORT="5000"
+LOG_LEVEL="info"
+
+# Admin Credentials
+ADMIN_USERNAME="admin"
+ADMIN_PASSWORD="admin123"
+
+# Session
+SESSION_SECRET="your-secret-key"
+SESSION_MAX_AGE="86400000"
+
+# Rate Limiting
+RATE_LIMIT_WINDOW_MS="900000"
+RATE_LIMIT_MAX="100"
+
+# CORS
+ALLOWED_ORIGINS="*"
